# Klarsicht

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile.agent  Dockerfile.dashboard  Dockerfile.landing  Dockerfile.site  LICENSE  README.md  artifacthub-repo.yml  index.yaml  klarsicht-0.2.0.tgz  klarsicht-0.3.0.tgz  klarsicht-0.3.1.tgz  klarsicht-0.3.2.tgz  klarsicht-0.3.3.tgz  klarsicht-0.3.4.tgz  klarsicht-0.3.5.tgz  klarsicht-0.3.6.tgz  klarsicht-0.4.0.tgz  klarsicht-0.4.1.tgz  klarsicht-0.4.2.tgz  klarsicht-0.4.3.tgz  klarsicht-0.4.4.tgz  klarsicht-0.4.5.tgz  klarsicht-0.4.6.tgz  klarsicht-0.4.7.tgz  klarsicht-0.5.0.tgz  klarsicht-0.5.1.tgz  klarsicht-0.5.2.tgz  klarsicht-0.5.3.tgz  klarsicht-0.5.4.tgz  klarsicht-0.5.5.tgz  klarsicht-0.6.0.tgz  klarsicht-0.6.1.tgz  klarsicht-0.6.10.tgz  klarsicht-0.6.11.tgz  klarsicht-0.6.12.tgz  klarsicht-0.6.13.tgz  klarsicht-0.6.14.tgz  (+13 more)
.github/workflows/: ci.yml
app/: agent_startup.py  auth.py  catalog.py  cluster_api.py  cluster_registry.py  config.py  db.py  steps.py  tls.py  webhook.py
app/agent/: prompt.py  rca_agent.py  tools.py
app/models/: alert.py  rca.py
app/tools/: confluence.py  connectivity.py  k8s.py  mimir.py  remote_k8s.py
dashboard/: index.html  package.json  vite.config.ts
deploy/: landing.yaml  site.yaml
docs/: competitive-analysis.md
examples/: test-crashloop.yaml
helm/: values-vibebros.yaml
landing/: index.html
site/: hugo.yaml
tests/: test_agent.py  test_auth.py  test_catalog.py  test_cluster.py  test_connectivity.py  test_db.py  test_k8s_tools.py  test_webhook.py
(+45 files in other folders)
